package Classes;

public enum Status {
    ATIVO,
    INATIVO,
}
